--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -89,6 +89,6 @@ postgres_password=
 
 #test configuration#########################
 operationcount=30000
-database=Atlas
+database=Cassandra
 website=Twitter
 consistency=RYW
