--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -88,7 +88,7 @@ postgres_password=
 
 
 #test configuration#########################
-operationcount=30000
-database=Cassandra
+operationcount=300000
+database=Postgresxl
 website=Twitter
-consistency=RYW
+consistency=MR
