cassandra read resultset init=null....

--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -77,9 +77,9 @@ atlasPassword=13061076zl.
 #mysql_user=root
 #mysql_password=490389752
 #mysql_database=test27
-mysql_user=zl
-mysql_password=490389zl
-mysql_database=causaltest
+mysql_user=root
+mysql_password=new_pass
+mysql_database=test27
 
 
 #postgres############################################
@@ -88,7 +88,7 @@ postgres_password=
 
 
 #test configuration#########################
-operationcount=300000
-database=Postgresxl
+operationcount=500000
+database=Mysql
 website=Twitter
-consistency=MR
+consistency=MW
