--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -88,7 +88,7 @@ postgres_password=
 
 
 #test configuration#########################
-operationcount=500000
-database=Mysql
+operationcount=50000
+database=Cassandra
 website=Twitter
 consistency=MW
