--- a/core/pom.xml
+++ b/core/pom.xml
@@ -79,6 +79,11 @@ LICENSE file.
           <artifactId>junit</artifactId>
           <version>4.12</version>
       </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>3.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
