--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -89,6 +89,6 @@ postgres_password=
 
 #test configuration#########################
 operationcount=50000
-database=Cassandra
-website=Twitter
-consistency=MW
+database=Hbase
+website=Amazon
+consistency=MR
