test if redis make process slow

--- a/causalwebserver/src/main/resources/conf.properties
+++ b/causalwebserver/src/main/resources/conf.properties
@@ -89,6 +89,6 @@ postgres_password=
 
 #test configuration#########################
 operationcount=50000
-database=Hbase
-website=Amazon
+database=Cassandra
+website=Twitter
 consistency=MR
