--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,6 +40,12 @@ LICENSE file.
       <version>4.12</version>
       <!--scope>test</scope-->
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.58</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.htrace</groupId>
